--- a/frontend/private.html
+++ b/frontend/private.html
@@ -46,8 +46,8 @@
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="#">公屏发言 <span class="sr-only">(current)</span></a></li>
-                        <li class="active"><a href="#">私聊</a></li>
+                        <li><a href="room.html">公屏发言 <span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="private.html">私聊</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
