--- a/frontend/login.html
+++ b/frontend/login.html
@@ -44,30 +44,30 @@
                 <div class="row text-center">
                     <h4>登录</h4>
                 </div>
-                <form action="#" class="form-horizontal">
+                <form class="form-horizontal">
                     <!-- 用户名 -->
                     <div class="form-group">
-                        <label for="uname" class="col-md-4 control-label">用户名：</label>
+                        <label for="username" class="col-md-4 control-label">用户名：</label>
                         <div class="col-md-4">
-                            <input id="uname" type="text" class="form-control">
+                            <input id="username" type="text" class="form-control">
                         </div>
                         <div class="col-md-4">
-                            <span id="unameMsg" class="help-block"></span>
+                            <span id="usernameMsg" class="help-block"></span>
                         </div>
                     </div>
                     <!-- 密码 -->
                     <div class="form-group">
-                        <label for="upwd" class="col-md-4 control-label">密码：</label>
+                        <label for="password" class="col-md-4 control-label">密码：</label>
                         <div class="col-md-4">
-                            <input id="upwd" type="password" class="form-control">
+                            <input id="password" type="password" class="form-control">
                         </div>
                         <div class="col-md-4">
-                            <span class="help-block"></span>
+                            <span id="passwordMsg" class="help-block"></span>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-4 col-md-offset-4">
-                            <button id="btRegister" type="button" class="btn btn-info form-control">登录</button>
+                            <button id="btLogin" type="button" class="btn btn-info form-control">登录</button>
                         </div>
                     </div>
 
@@ -79,80 +79,52 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script>
+    $('#btLogin').click(function(){
+        let username = $('#username').val()
+        let password = $('#password').val()
 
-    /*为btRegister按钮添加事件监听*/
-    $('#btRegister').click(function(){
-        //读取所有的表单输入
-        let uname = $('#uname').val()
-        let upwd = $('#upwd').val()
-        let repwd = $('#repwd').val()
-        let sex = $('#sex').val()
-        let age = $('#age').val()
-        let hobby = $('#hobby').val()
-        console.log(uname,upwd,repwd,sex,age,hobby)
-        //验证表单输入的合法性
-        if(uname.length<3){
-            $('#unameMsg').html('用户名长度太短了').removeClass('alert-info').addClass('alert-danger')
-        } else if(uname.length>12){
-            $('#unameMsg').html('用户名长度太长了').removeClass('alert-info').addClass('alert-danger')
-        } else {
-            $('#unameMsg').html('用户名长度合法').removeClass('alert-danger').addClass('alert-info')
+        if(username==null || username.length==""){
+            $('#usernameMsg').html('请填写用户名！').removeClass('alert-info').addClass('alert-danger')
+            return
         }
-        //异步提交用户的输入给后台API
+        if(password==null || password.length==""){
+            $('#usernameMsg').html('请填写密码！').removeClass('alert-info').addClass('alert-danger')
+            return
+        }
+
         $.ajax({
             method: 'POST',
-            url: 'http://127.0.0.1:5050/user/register',
-            data: `uname=${uname}&upwd=${upwd}&email=${email}&phone=${phone}`,
+            url: 'http://127.0.0.1:5050/user/login',
+            data: `username=${username}&password=${password}`,
             success: (data, msg, xhr)=>{
                 console.log('ok')
                 if(data.code===200){
-                    $('#modalRegisterSucc').modal()
+                    sessionStorage.setItem('user',data.user)
+                    window.location.href="room.html"
                 } else {
                     $('#serverErrMsg').html(data.msg)
-                    $('#modalRegisterErr').modal()
+                    $('#modalLoginErr').modal()
                 }
             },
             error: (xhr,err)=>{
-                console.log('err')
                 console.log(xhr)
                 console.log(err)
             }
         })
     })
 </script>
-<!-- 弹出式对话框：表示注册成功 -->
-<div id="modalRegisterSucc" class="modal fade"> <!-- 半透明遮罩 -->
-    <div class="modal-dialog modal-sm"> <!-- 对话框尺寸、位置 -->
-        <div class="modal-content"> <!--边框、倒角、背景色-->
-            <!-- 头部 -->
+
+<!-- 弹出式对话框：表示登录失败 -->
+<div id="modalLoginErr" class="modal fade">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">注册成功</h4>
+                <h4 class="modal-title">登录失败</h4>
             </div>
-            <!-- 主体 -->
             <div class="modal-body">
-                <p>新用户注册成功！</p>
-            </div>
-            <!-- 尾部 -->
-            <div class="modal-footer">
-                <button type="button" class="btn btn-info" data-dismiss="modal">确定</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- 弹出式对话框：表示注册失败 -->
-<div id="modalRegisterErr" class="modal fade"> <!-- 半透明遮罩 -->
-    <div class="modal-dialog modal-sm"> <!-- 对话框尺寸、位置 -->
-        <div class="modal-content"> <!--边框、倒角、背景色-->
-            <!-- 头部 -->
-            <div class="modal-header">
-                <h4 class="modal-title">注册失败</h4>
-            </div>
-            <!-- 主体 -->
-            <div class="modal-body">
-                <p><b>新用户注册失败！</b></p>
+                <p><b>登录失败！</b></p>
                 <p>服务器返回错误消息：<span id="serverErrMsg"></span></p>
             </div>
-            <!-- 尾部 -->
             <div class="modal-footer">
                 <button type="button" class="btn btn-info" data-dismiss="modal">确定</button>
             </div>
