--- a/frontend/room.html
+++ b/frontend/room.html
@@ -46,7 +46,7 @@
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="room.html>公屏发言 <span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="room.html">公屏聊天 <span class="sr-only">(current)</span></a></li>
                         <li><a href="private.html">私聊</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
@@ -56,7 +56,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="#">添加好友</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="#">退出</a></li>
+                                <li><a onclick="exitroom()">退出</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -129,6 +129,20 @@
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script>
+        $(window).ready(()=>{
+            let user = sessionStorage.getItem("user")
+            if(user==null){
+                alert("请先登录!")
+                window.location.href="login.html"
+            }
+        })
+
+        function exitroom(){
+            sessionStorage.removeItem("user")
+            window.location.href="login.html"
+        }
+    </script>
 
 </body>
 
